--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
     </div>
   </div>
   <hr class="container">
-  <div class="back-imd-set d-none d-md-flex">
+  <div class="back-imd-set d-none d-md-flex bg-cover bg-norepeat">
     <div class=" container-fluid mt-5 pt-5 mb-5 ">
       <h2 class="text-center mb-4 text-white">Shop by Lifestyle</h2>
       <div class="row justify-content-center">
@@ -849,43 +849,43 @@
     </div>
 
   </div>
-  <nav class="navbar navbar-expand-lg navbar-light mx-2 my-4">
-    <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">My account</a>
+
+    <div class="container-fluid mt-5">
+        <div class="row d-flex justify-content-between">
+        <div class="col-md-6 col-sm-6 ">
+          <ul class="d-flex list-unstyled ">
+            <li>
+                <a class="nav-link mx-3" href="#">My account</a>
+            </li>
+            <li >
+                <a class="nav-link me-3 " href="#">Bag</a>
+            </li>
+            <li>
+                <a class="nav-link me-3" href="#">Personal info</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link me-3" href="#">Wishlist</a>
+            </li>
+        </ul>
+        </div>
+            <div class="col-md-6 col-sm-6">
+              <ul class="d-flex justify-content-end me-5 list-unstyled">
+                <li>
+                    <a class="nav-link me-3" href="#"><i class="bi bi-facebook"></i></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Bag</a>
+                <li>
+                    <a class="nav-link me-3" href="#"><i class="bi bi-twitter"></i></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Personal info</a>
+                <li>
+                    <a class="nav-link me-3" href="#"><i class="bi bi-skype"></i></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Wishlist</a>
+                <li>
+                    <a class="nav-link me-3" href="#"><i class="bi bi-instagram"></i></a>
                 </li>
             </ul>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="bi bi-facebook"></i></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="bi bi-twitter"></i></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="bi bi-skype"></i></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="bi bi-instagram"></i></a>
-                </li>
-            </ul>
+            </div>
         </div>
     </div>
-</nav>
 <hr>
   <footer class=" text-dark py-5 ">
     <div class="container-fluid">
